# sound-of-interrupts

./: CMakeLists.txt  Makefile  README.md  main.c  proc_parser.h
src/: CMakeLists.txt  main.c
src/helpers/: CMakeLists.txt  pa_noiser.c  pa_noiser.h  proc_parser.c
src/qtgui/: CMakeLists.txt  graphic_widget.cpp  graphic_widget.h  main.cpp  main_window.cpp  main_window.h  thread.cpp  thread.h
